# rust-training

./: Cargo.toml  Dockerfile  README.md  credentials.yaml.template
src/: main.rs
