[package]
name = "template"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {"version"= "1", features=["full"]}
public-ip = "0.2"
yaml-rust = "0.4"
ctrlc = "3.1.9"
dns-lookup = "1.0.6"
ureq = "2.1.1"